[package]
name = "yasper"
version = "0.0.1"
authors = ["ergpopler <ergpopler0@protonmail.com"]
edition = "2018"
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
toml = "0.5.8"
serde_derive = "*"
serde = "*"
clap = "2.33.3"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

